# hr-portal

./: .gitignore  .impeccable.md  AGENTS.md  CUsersgaby.liuAppDataLocalTempreview_diff.txt  HR-Agent完整建设方案.md  HR-Agent建设方案-专家修订版.md  HR提效工具搭建原始需求.txt  精简版需求开发文档提示词.md  表格归集工具-已建模板新增源映射开发Spec.md  通用连接器.txt
hr-portal/backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
hr-portal/backend/alembic/: README.md  env.py
hr-portal/backend/app/: main.py  seed.py
hr-portal/backend/scripts/: backfill_scope_codes.py  check_report_config_references.py  check_trees_api.py  code_migration.json  drop_fields.json  field_mapping.json  fix_calc_fields_dataset4.py  gen_field_mapping.py  migrate_allocation_schemes.py  migrate_codes.py  migrate_rename_normalize.py  normalize_push_report_sources.py  rebuild_source_tables.py  rebuild_trees.py  seed_shebao_template.py  test_manual_trigger.py  test_manual_trigger_e2e.py  test_partial_e2e.py  test_partial_severity.py  test_phase2_5.py  test_phase6_3.py  test_retry_failed_items.py  test_retry_step.py  verify_employee_profile_roster.py  write_routers.py  字段迁移审核表.md
hr-portal/backend/tests/: conftest.py  entity_helpers.py  test_admin_tables_router.py  test_agreement_uploaded_docx_layout.py  test_ai_capability_routes.py  test_ai_channel_sessions.py  test_ai_controlled_actions.py  test_ai_formula_ast_guardrail.py  test_ai_formula_core.py  test_ai_maintenance.py  test_ai_phase0_acceptance.py  test_ai_phase1_acceptance.py  test_allocation_entity.py  test_api_service.py  test_beisen_report_adapter.py  test_connector_catalog.py  (+114 more)
(+888 files in other folders)
