[project]
name = "hr-portal-backend"
version = "0.1.0"
description = "HR 提效工具 — 权限管理与报表中台 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.115",
    "uvicorn[standard]>=0.27,<0.31",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<1.14",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.1,<5",
    "passlib[bcrypt]>=1.7,<2",
    "cryptography>=42.0,<44",
    "httpx>=0.27,<0.28",
    "apscheduler>=3.10,<4",
    "openpyxl>=3.1,<4",
    "formulas>=1.3,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.9,<0.1",
    "email-validator>=2.1,<3",
    "aiomysql>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.4,<0.6",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]
